--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ h2 {
 #passwordContainer {
     border-radius: 0.5em;
     background-color: #3399ff;
+    overflow: auto;
 }
 .passwordFeaturesContainer {
     display: flex;
@@ -45,4 +46,9 @@ h2 {
     color: rgb(50, 64, 168);
     font-size: 1.2em;
     font-weight: 700;
+}
+@media only screen and (max-width: 550px){
+    #generatorContainer {
+        width: 90%;
+    }
 }
